src/objects/Legacy_Note__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Parent_ID__c</fullName>
        <label>Legacy Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebuilt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebuilt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Legacy Note</label>
    <nameField>
        <displayFormat>LN-{0000}</displayFormat>
        <label>Legacy Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>